--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -42,21 +42,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="10dp"
-                    android:textAlignment="center"
-                    android:text="SIGN UP"
-                    android:textColor="#000"
-                    android:textSize="20dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,6 +54,7 @@
                     android:layout_marginBottom="15dp"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:background="@drawable/bt_background"
                     android:weightSum="1">
 
                     <ImageView
@@ -76,10 +67,10 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.15"
-                        android:background="@drawable/bt_background"
-                        android:gravity="center"
+                        android:background="#fff"
+                        android:gravity="left"
                         android:hint="Enter Name"
                         android:inputType="textPersonName"
                         android:textColor="#000"
@@ -94,6 +85,7 @@
                     android:layout_marginBottom="15dp"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:background="@drawable/bt_background"
                     android:weightSum="1">
 
                     <ImageView
@@ -106,10 +98,10 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.15"
-                        android:background="@drawable/bt_background"
-                        android:gravity="center"
+                        android:background="#fff"
+                        android:gravity="left"
                         android:hint="Enter Mobile No."
                         android:inputType="number"
                         android:textColor="#000"
@@ -124,6 +116,7 @@
                     android:layout_marginBottom="15dp"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:background="@drawable/bt_background"
                     android:weightSum="1">
 
                     <ImageView
@@ -136,10 +129,10 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.15"
-                        android:background="@drawable/bt_background"
-                        android:gravity="center"
+                        android:background="#fff"
+                        android:gravity="left"
                         android:hint="Enter Password"
                         android:inputType="textPassword"
                         android:textColor="#000"
@@ -154,6 +147,7 @@
                     android:layout_marginBottom="20dp"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:background="@drawable/bt_background"
                     android:weightSum="1">
 
                     <ImageView
@@ -166,10 +160,10 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.15"
-                        android:background="@drawable/bt_background"
-                        android:gravity="center"
+                        android:background="#fff"
+                        android:gravity="left"
                         android:hint="Enter Re Password"
                         android:inputType="textPassword"
                         android:textColor="#000"
