--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -37,7 +37,7 @@
             android:gravity="bottom"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:padding="5dp"
+            android:padding="10dp"
             android:weightSum="7"
             >
 
@@ -66,7 +66,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:text="List/Map"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -90,7 +90,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:text="Map Layers"
                         android:textSize="10dp"
                         android:textColor="#000"
