--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -51,7 +51,7 @@
                 <!--&gt;-->
 
                 <LinearLayout
-                    android:id="@+id/fav_list"
+                    android:id="@+id/mlist"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -143,7 +143,7 @@
                         />
                 </LinearLayout>
                 <LinearLayout
-                    android:id="@+id/pro"
+                    android:id="@+id/create_act"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
