--- a/app/src/main/res/layout/event_member_list.xml
+++ b/app/src/main/res/layout/event_member_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+   >
 
     <LinearLayout
         android:weightSum="1"
@@ -21,32 +21,6 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-
-                <LinearLayout
-                    android:layout_weight="0.45"
-                    android:gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:background="@drawable/card_bg"
-                        >
-                        <android.support.v7.widget.SearchView
-                            android:layout_marginRight="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                        </android.support.v7.widget.SearchView>
-                    </android.support.v7.widget.CardView>
-
-                </LinearLayout>
 
 
                 <LinearLayout
@@ -162,7 +136,7 @@
                                         android:layout_height="35dp" />
 
                                     <Button
-                                        android:text="Select"
+                                        android:text="Remove"
                                         android:textAllCaps="false"
                                         android:layout_weight="0.50"
                                         android:textColor="#fff"
@@ -293,7 +267,7 @@
                                         android:layout_height="35dp" />
 
                                     <Button
-                                        android:text="Select"
+                                        android:text="Remove"
                                         android:textAllCaps="false"
                                         android:layout_weight="0.50"
                                         android:textColor="#fff"
