--- a/app/src/main/res/layout/my_activity_fragment.xml
+++ b/app/src/main/res/layout/my_activity_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fregment.ListFragment">
+    >
 
     <LinearLayout
         android:weightSum="1"
@@ -116,6 +116,7 @@
                             android:layout_height="wrap_content">
 
                             <Button
+                                android:id="@+id/edit_event"
                                 android:text="Edit"
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
