--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -12,7 +12,7 @@
     >
 
     <FrameLayout
-        android:layout_weight="0.95"
+        android:layout_weight="0.1"
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,9 +22,9 @@
 
 
     <android.support.v7.widget.CardView
-        android:layout_weight="0.05"
+        android:layout_weight="0.9"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -32,7 +32,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#fff"
             android:gravity="bottom"
             android:layout_marginTop="10dp"
@@ -66,7 +66,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
+                        android:layout_height="match_parent"
                         android:text="List/Map"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -77,7 +77,7 @@
                 <LinearLayout
                     android:id="@+id/add_event"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -90,7 +90,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
+                        android:layout_height="match_parent"
                         android:text="Map Layers"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -101,7 +101,7 @@
                 <LinearLayout
                     android:id="@+id/proviview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -114,7 +114,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Here"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -125,7 +125,7 @@
                 <LinearLayout
                     android:id="@+id/piew"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -138,14 +138,14 @@
                         <!--/>-->
                     <Spinner
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:entries="@array/home_now"
                         />
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/create_act"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -158,7 +158,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Create Event"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -166,9 +166,9 @@
                         />
                 </LinearLayout>
                 <LinearLayout
-                    android:id="@+id/provile_vi455ew"
+                    android:id="@+id/share_id"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -181,7 +181,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Share"
                         android:textSize="10dp"
                         android:textColor="#000"
@@ -191,7 +191,7 @@
                 <LinearLayout
                     android:id="@+id/provile_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -204,7 +204,7 @@
                         />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Menu"
                         android:textSize="10dp"
                         android:textColor="#000"
