--- a/app/src/main/res/layout/event_host_user_profile.xml
+++ b/app/src/main/res/layout/event_host_user_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fregment.ListFragment">
+    >
 
     <LinearLayout
         android:orientation="vertical"
@@ -122,6 +122,7 @@
 
 
             <LinearLayout
+                android:id="@+id/review"
                 android:background="#A0AAE2"
                 android:layout_marginTop="15dp"
                 android:orientation="vertical"
