--- a/app/src/main/res/layout/fragment_map_fregment.xml
+++ b/app/src/main/res/layout/fragment_map_fregment.xml
@@ -12,20 +12,11 @@
       android:layout_height="match_parent">
 
 
-
-      <LinearLayout
-          android:orientation="horizontal"
-          android:background="#000"
-          android:layout_width="match_parent"
-          android:layout_height="1dp"></LinearLayout>
-
-
       <LinearLayout
           android:padding="5dp"
           android:layout_marginTop="5dp"
-          android:layout_weight="0.10"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="wrap_content">
 
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
@@ -77,7 +68,66 @@
           </LinearLayout>
           </android.support.v7.widget.CardView>
 
+
+
       </LinearLayout>
+
+    <LinearLayout
+        android:padding="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+      <android.support.v7.widget.CardView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="5dp"
+          >
+
+          <LinearLayout
+              android:id="@+id/btnn1"
+              android:weightSum="1"
+
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+              <LinearLayout
+                  android:layout_weight="0.70"
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+
+                  <ImageView
+                      android:src="@drawable/profile"
+                      android:layout_width="match_parent"
+                      android:layout_height="70dp" />
+
+                  <TextView
+                      android:text="Mr Kumar"
+                      android:textColor="#000"
+                      android:gravity="center"
+                      android:textSize="11dp"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content" />
+
+              </LinearLayout>
+
+              <LinearLayout
+                  android:layout_weight="0.30"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+
+                  <TextView
+                      android:text="If you've ever attended a corporate event, then you know the welcome speech gets all of the attention. The welcome speech is what allures."
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content" />
+
+              </LinearLayout>
+
+          </LinearLayout>
+      </android.support.v7.widget.CardView>
+    </LinearLayout>
 
   </LinearLayout>
 
